@startuml classes_aux
set namespaceSeparator none
class "aiBoardGame.logic.engine.auxiliary.Board" as aiBoardGame.logic.engine.auxiliary.Board<[Side,SideState]> #aliceblue {
}
class "aiBoardGame.logic.engine.auxiliary.BoardEntity" as aiBoardGame.logic.engine.auxiliary.BoardEntity #aliceblue {
}
abstract class "aiBoardGame.logic.engine.pieces.piece.Piece" as aiBoardGame.logic.engine.pieces.piece.Piece #aliceblue {
}
class "aiBoardGame.logic.engine.auxiliary.Delta" as aiBoardGame.logic.engine.auxiliary.Delta #aliceblue {
}
class "aiBoardGame.logic.engine.auxiliary.Position" as aiBoardGame.logic.engine.auxiliary.Position #aliceblue {
}
enum "aiBoardGame.logic.engine.auxiliary.Side" as aiBoardGame.logic.engine.auxiliary.Side #aliceblue {
}
class "aiBoardGame.logic.engine.auxiliary.SideState" as aiBoardGame.logic.engine.auxiliary.SideState<[Position,BoardEntity]> #aliceblue {
}
aiBoardGame.logic.engine.auxiliary.Side --* aiBoardGame.logic.engine.auxiliary.BoardEntity : side
aiBoardGame.logic.engine.pieces.piece.Piece --* aiBoardGame.logic.engine.auxiliary.BoardEntity : piece
@enduml
